Cinnamon: Fix invisible texts in Run-Dialog

--- a/cinnamon/_common.scss
+++ b/cinnamon/_common.scss
@@ -1011,6 +1011,7 @@ $icon_size: 16px;
     width: 20em;
     padding: 7px;
     border-radius: 0;
+    color: $osd_fg_color;
     caret-color: $osd_fg_color;
     selected-color: $selected_fg_color;
     selection-background-color: $selected_bg_color;
