--- a/cinnamon/cinnamon.css
+++ b/cinnamon/cinnamon.css
@@ -514,7 +514,7 @@ StScrollBar {
   -cinnamon-close-overlap: 10px; }
   .workspace-close-button:hover,
   .window-close:hover {
-    background-image: url("common-assets/misc/close-hover.svg");
+    background-image: url("common-assets/misc/close.svg");
     background-size: 26px;
     height: 26px;
     width: 26px; }
@@ -579,29 +579,13 @@ StScrollBar {
 
 .calendar-change-month-back {
   background-image: url("common-assets/misc/calendar-arrow-left.svg"); }
-  .calendar-change-month-back:focus, .calendar-change-month-back:hover {
-    background-image: url("common-assets/misc/calendar-arrow-left-hover.svg"); }
-  .calendar-change-month-back:active {
-    background-image: url("common-assets/misc/calendar-arrow-left.svg"); }
   .calendar-change-month-back:rtl {
     background-image: url("common-assets/misc/calendar-arrow-right.svg"); }
-    .calendar-change-month-back:rtl:focus, .calendar-change-month-back:rtl:hover {
-      background-image: url("common-assets/misc/calendar-arrow-right-hover.svg"); }
-    .calendar-change-month-back:rtl:active {
-      background-image: url("common-assets/misc/calendar-arrow-right.svg"); }
 
 .calendar-change-month-forward {
   background-image: url("common-assets/misc/calendar-arrow-right.svg"); }
-  .calendar-change-month-forward:focus, .calendar-change-month-forward:hover {
-    background-image: url("common-assets/misc/calendar-arrow-right-hover.svg"); }
-  .calendar-change-month-forward:active {
-    background-image: url("common-assets/misc/calendar-arrow-right.svg"); }
   .calendar-change-month-forward:rtl {
     background-image: url("common-assets/misc/calendar-arrow-left.svg"); }
-    .calendar-change-month-forward:rtl:focus, .calendar-change-month-forward:rtl:hover {
-      background-image: url("common-assets/misc/calendar-arrow-left-hover.svg"); }
-    .calendar-change-month-forward:rtl:active {
-      background-image: url("common-assets/misc/calendar-arrow-left.svg"); }
 
 .datemenu-date-label {
   padding: 0.4em 1.75em;
@@ -816,6 +800,7 @@ StScrollBar {
     width: 20em;
     padding: 7px;
     border-radius: 0;
+    color: #ECEFF1;
     caret-color: #ECEFF1;
     selected-color: #FFFFFF;
     selection-background-color: #00BCD4; }
